# toolsbox

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md
doc/: any.md  for_each.md  pool.md  pool_benchmark.md  print_type.md  test.md  variant.md  zip.md
doc/output/perf_object_pool_01/: linear_15_15_100000_10240.out  linear_30_1_100000_10240.out  mutex_1_30_100000_10240.out  none_1_30_100000_10240.out  none_30_1_100000_10240.out  old_tree_1_30_100000_10240.out  old_tree_30_1_100000_10240.out  tree_15_15_100000_10240.out  tree_1_30_100000_10240.out  tree_30_1_100000_10240.out
include/toolsbox/: any.hpp  apply.hpp  for_each.hpp  type_uid.hpp  variant.hpp  zip.hpp  zip_tuple.hpp
include/toolsbox/any/: any.hpp  any_hash.hpp  any_io.hpp  any_value.hpp  any_value_impl.hpp  type_traits.hpp
include/toolsbox/lockfree/: fix_size_queue.hpp  stack.hpp
include/toolsbox/lockfree/detail/: helper.hpp  pointer_tag.hpp
include/toolsbox/mpl/: print_type.hpp  static_map.hpp  static_max.hpp  static_size.hpp
include/toolsbox/pool/: object_pool.hpp  thread_pool.hpp
include/toolsbox/pool/detail/: basic_mutex_stack.hpp  basic_tree_node.hpp  deleter.hpp  helper.hpp  linear_node.hpp  object_pool_impl.hpp  segment.hpp  tree_node.hpp
include/toolsbox/sig/: connection.hh  group_connection.hh  iconnection.hh  signal.hh
include/toolsbox/variant/: result_of_visitor.hpp  select_type.hpp  variant.hpp  variant_hash.hpp  variant_io.hpp  variant_visitor.hpp  visitor_helper.hpp
tests/: CMakeLists.txt  perf_lockfree_01.cc  perf_object_pool_01.cc  ref_lockfree.hpp  ref_object_pool.hpp  test_any.cc  test_apply.cc  test_for_each.cc  test_lockfree.cc  test_pool.cc  test_print_type.cc  test_sig.cc  test_static_map.cc  test_thread_pool.cc  test_type_uid.cc  test_variant.cc  test_zip.cc  test_zip_tuple.cc
tests/results/perf_object_pool_01/: linear_1_30_100000_10240.out  mutex_15_15_100000_10240.out  mutex_30_1_100000_10240.out  none_15_15_100000_10240.out  old_tree_15_15_100000_10240.out
